--- a/React16/code-along/section22-webpack/.babelrc
+++ b/React16/code-along/section22-webpack/.babelrc
@@ -8,6 +8,10 @@
                 ]
             }
           }],
-        "react"
+          "stage-2"
+          "react"
+    ],
+    "plugins": [
+        "syntax-dynamic-import"
     ]
 }
